--- a/sample/src/main/res/layout/fragment_sample.xml
+++ b/sample/src/main/res/layout/fragment_sample.xml
@@ -12,5 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/sample_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
 
